--- a/app/src/main/res/layout/activity_backgammon.xml
+++ b/app/src/main/res/layout/activity_backgammon.xml
@@ -837,6 +837,7 @@
                 app:alignItems="center"/>
 
             <com.google.android.flexbox.FlexboxLayout
+                android:tag="-1"
                 android:id="@+id/dock_minus_1"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
