--- a/app/src/main/res/layout/activity_backgammon.xml
+++ b/app/src/main/res/layout/activity_backgammon.xml
@@ -164,6 +164,7 @@
                 </com.google.android.flexbox.FlexboxLayout>
             </LinearLayout>
             <Button
+                android:id="@+id/btn_menu"
                 android:textColor="#fff"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"
