--- a/app/src/main/res/layout/highscores_entry.xml
+++ b/app/src/main/res/layout/highscores_entry.xml
@@ -10,13 +10,15 @@
         android:id="@+id/nick"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:textSize="20sp"
+        android:textSize="25sp"
+        android:fontFamily="casual"
         android:layout_weight="50"
         android:textAlignment="center"
         android:text="nick" />
     <TextView
         android:id="@+id/points"
         android:textSize="20sp"
+        android:fontFamily="casual"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="50"
